data/diff_tests/wasmtime/br_table_IncorrectHandlingofControlFlowAcrossModuleBoundaries_2549.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\85\80\80\80\00\01\60"
    "\00\01\7f\02\91\80\80\80\00\01\03\65\6e\76\09\67"
    "\65\74\5f\76\61\6c\75\65\00\00\03\82\80\80\80\00"
    "\01\00\0a\92\80\80\80\00\01\8c\80\80\80\00\00\02"
    "\7f\10\00\41\0a\0e\00\00\0b\0b"
  )
""
)